crates/core/src/utils/report/tests/snapshots/caesura__utils__report__tests__report_renderer_tests__report_renderer_render_overlapping_grouped_issues.snap
---
source: crates/core/src/utils/report/tests/report_renderer_tests.rs
expression: output
---
# Unknown Artist - Test Album [2020]

- **Source:** https://example.com/torrents.php?id=123&torrentid=456#torrent456
- **Report:** https://example.com/reportsv2.php?action=report&id=456

## Suggested reports

- **Trumpable**
- **Bad Tags**
- **Mislabeled**

## Report body

Paste the block below into the "Comments" field of the report form.

```
FLAC stream error: bad header:
- "01. Track.flac"
- "03. Track.flac"
- "05. Track.flac"

Missing tags: album:
- "CD1/01. Track.flac"
- "CD2/01. Disk 2 track.flac"
- "CD2/03. Disk 2 track.flac"

Missing tags: artist:
- "03. Track.flac"
- "10. Track.flac"

Missing tags: track number, artist:
- "01. Track.flac"
- "05. Track.flac"
- "08. Track.flac"

No tags:
- "CD1/01. Track.flac"

Unnecessary nested directory:
- ""

[code]caesura inspect "content"[/code]

[pre]
[/pre]
```
